# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
aoc_2020/solutions/: __init__.py  puzzle_01.py  puzzle_02.py  puzzle_03.py  puzzle_04.py
aoc_2021/solutions/: __init__.py  puzzle_01.py  puzzle_02.py  puzzle_03.py
aoc_2022/solutions/: __init__.py  puzzle_01.py  puzzle_02.py  puzzle_03.py  puzzle_04.py  puzzle_05.py  puzzle_06.py  puzzle_07.py  puzzle_08.py  puzzle_09.py  puzzle_09_plt.py  puzzle_10.py  puzzle_11.py  puzzle_12.py
aoc_2023/inputs/: input_10_formatted  input_11_formatted
aoc_2023/solutions/: __init__.py  cli.py  input_05.py  puzzle_01.py  puzzle_02.py  puzzle_03.py  puzzle_04.py  puzzle_05.py  puzzle_06.py  puzzle_06_min.py  puzzle_07.py  puzzle_08.py  puzzle_09.py  puzzle_10.py  puzzle_11.py  puzzle_12.py  puzzle_13.py  utils.py
aoc_utils/: __init__.py  cli.py  parsing.py  puzzle.py.jinja  templates.py  utils.py
solutions/: __init__.py  cli.py  puzzle_01.py  puzzle_02.py  puzzle_03.py  puzzle_04.py  solution_1.py  solution_2.py  solution_3.py  solution_4.py  utils.py
